--- a/ByteMarket/views/editProfile.html
+++ b/ByteMarket/views/editProfile.html
@@ -12,6 +12,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../public/editProfile.css">
+    <link rel="stylesheet" href="../public/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
