--- a/ByteMarket/views/profile.html
+++ b/ByteMarket/views/profile.html
@@ -11,6 +11,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../public/profileStyle.css">
+    <link rel="stylesheet" href="../public/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
@@ -79,6 +80,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link" href="#">Favoritos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Mis productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Reseñas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Últimas compras</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Últimas ventas</a></li>
                 </ul>
