--- a/ByteMarket/views/barrausuario.html
+++ b/ByteMarket/views/barrausuario.html
@@ -48,6 +48,13 @@
                             <text class="fav-sellText">Vender</text>
                         </button>
                     </div>
+
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
+                        </button>
+                    </div>
                 </div>
     
                 <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
