--- a/ByteMarket/views/chat.html
+++ b/ByteMarket/views/chat.html
@@ -11,6 +11,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../public/profileStyle.css">
+    <link rel="stylesheet" href="../public/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
@@ -20,7 +21,7 @@
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
                 
-                <div class="col-2 d-flex align-items-center text-white header-logo"> 
+                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
                     <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </div>
@@ -51,13 +52,13 @@
 
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
-                            <i class="bi bi-chat-dots"></i>
-                            <text class="fav-sellText">Chat</text>
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
                         </button>
                     </div>
                 </div>
     
-                <div class="col-2 header-profile" height="55"> 
+                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
                     <div> 
                         <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
                     </div>  
