--- a/ByteMarket/views/favorite.html
+++ b/ByteMarket/views/favorite.html
@@ -51,8 +51,8 @@
 
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
-                            <i class="bi bi-chat-dots"></i>
-                            <text class="fav-sellText">Chat</text>
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
                         </button>
                     </div>
                 </div>
