--- a/ByteMarket/views/productDetails.html
+++ b/ByteMarket/views/productDetails.html
@@ -32,7 +32,6 @@
                         <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
                             <i class="bi bi-search" style="color: white;"></i>
                         </button>
-                        
                     </form>
                 </div>
     
@@ -53,8 +52,8 @@
 
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
-                            <i class="bi bi-chat-dots"></i>
-                            <text class="fav-sellText">Chat</text>
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
                         </button>
                     </div>
                 </div>
