--- a/ByteMarket/views/profile.html
+++ b/ByteMarket/views/profile.html
@@ -53,8 +53,8 @@
 
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
-                            <i class="bi bi-chat-dots"></i>
-                            <text class="fav-sellText">Chat</text>
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
                         </button>
                     </div>
                 </div>
@@ -80,7 +80,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link" href="#">Favoritos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Mis productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Reseñas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Últimas compras</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Últimas ventas</a></li>
@@ -120,6 +119,9 @@
             </div>
 
             <div class="row otherProducts">
+                <div class="">
+                    <h2 class="fw-bolder mb-3">Productos en venta</h2>
+                </div>
                 <div class="otherProduct col-3">
                     <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
