--- a/ByteMarket/views/newProductForm.html
+++ b/ByteMarket/views/newProductForm.html
@@ -12,6 +12,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../public/formStyle.css">
+    <link rel="stylesheet" href="../public/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
@@ -20,22 +21,51 @@
     <header class="bg-dark py-2">
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
-
+                
                 <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
                     <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </div>
-                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
+    
+                <div class="col-5 searchContainer">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
+                        <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
+                            <i class="bi bi-search" style="color: white;"></i>
+                        </button>
+                    </form>
+                </div>
+    
+                <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
-                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-heart-fill" style="color: white;"></i>
+                            <text class="fav-sellText">Favoritos</text>
+                        </button>
                     </div>
+                    
+                    
+
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-chat-fill"></i>
+                            <text class="fav-sellText">Chats</text>
+                        </button>
+                    </div>
+                </div>
+    
+                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
+                    <div> 
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                    </div>  
                     <div>
                         <p class="text-white fw-bolder mb-0">Usuario</p>
                     </div>
-                </div>
+                </div>              
             </div>
         </div>
     </header>
+            
     <!--Formulario-->
     <div class="container">
         <h2>Añadir un nuevo producto</h2>
