--- a/ByteMarket/public/homeStyle.css
+++ b/ByteMarket/public/homeStyle.css
@@ -179,3 +179,8 @@
     }
     
 }
+.productCard .card-img-top {
+    object-fit: cover;
+    width: 100%;
+    height: 200px; /* Todos las imágenes tendrán la misma altura */
+}
