--- a/ByteMarket/views/login.html
+++ b/ByteMarket/views/login.html
@@ -49,19 +49,18 @@
 
             <div class="row d-flex justify-content-between buttons">
                 <div class="col-md-6">
-                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
-                        <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
-                    </button>
+                    <a href="../views/singIn.html" class="btn btn-outline-dark btn-custom w-100">
+                        <i class="bi bi-person-plus"></i> Crear Cuenta
+                    </a>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" class="btn btn-outline-dark btn-custom w-100" data-bs-toggle="modal"
-                        data-bs-target="#registerModal">
-                        <i class="bi bi-person-plus"></i> Crear Cuenta
+                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
+                        <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
                     </button>
                 </div>
             </div>
         </form>
     </div>
-    <section class = "bg-dark text-white text-center py-2" id="footer" >ByterMarker</section>
+    <section class="bg-dark text-white text-center py-2" id="footer">ByteMarket</section>
 </body>
 </html>
