--- a/ByteMarket/views/singIn.html
+++ b/ByteMarket/views/singIn.html
@@ -57,14 +57,13 @@
 
             <div class="row d-flex justify-content-between buttons">
                 <div class="col-md-6">
-                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
-                        <i class="bi bi-person-plus"></i> Registrarse
-                    </button>
+                    <a href="../views/login.html" class="btn btn-outline-dark btn-custom w-100">
+                        <i class="bi bi-box-arrow-in-left"></i> Iniciar sesión
+                    </a>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" class="btn btn-outline-dark btn-custom w-100" data-bs-toggle="modal"
-                        data-bs-target="#loginModal">
-                        <i class="bi bi-box-arrow-in-left"></i> Iniciar sesión
+                    <button type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
+                        <i class="bi bi-person-plus"></i> Registrarse
                     </button>
                 </div>
             </div>
