--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
 
             <div class="col-2 d-flex align-items-center text-white header-logo">
                 <a href="/" class="d-flex align-items-center text-white text-decoration-none">
-                    <img src="images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                    <img src="/images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </a>
             </div>
