--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
                 </a>
             </div>
 
-            {{^logged}}
+            {{^logged}}  <!-- Usuario NO autenticado -->
             <div class="col-7 searchContainer">
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
@@ -18,7 +18,6 @@
                     </button>
                 </form>
             </div>
-
             <div class="col-3 loginButtons">
                 <a href="../login" style="text-decoration: none;">
                     <button class="btn btn-outline-dark btn-custom" type="submit">
@@ -28,8 +27,36 @@
             </div>
             {{/logged}}
 
-            {{#logged}}
-            {{#user}}
+            {{#admin}} <!-- Header para ADMINISTRADOR -->
+            <div class="col-6 searchContainer">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
+                    <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
+                        <i class="bi bi-search" style="color: white;"></i>
+                    </button>
+                </form>
+            </div>
+            <div class="col-2 loginButtons justify-content-end">
+                <a href="../login" style="text-decoration: none;">
+                    <button class="btn btn-outline-dark btn-custom" type="submit">
+                        <i class="bi bi-flag-fill"></i> Reportes
+                    </button>
+                </a>
+            </div>
+            <div class="col-3 header-profile" height="55">
+                <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
+                    <div>
+                        <img class="profilePic" src="images/perfil.png" alt="Logo">
+                    </div>
+                    <div>
+                        <p class="text-white fw-bolder mb-0">{{userName}}</p>
+                    </div>
+                </a>
+            </div>
+            {{/admin}}
+
+            {{#logged}} <!-- Header para USUARIO (solo si NO es admin) -->
+            {{^admin}}
             <div class="col-6 searchContainer">
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
@@ -48,12 +75,11 @@
                 </div>
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='ByteMarket\backend\src\main\resources\templates\newProduct.html'">
+                        onclick="window.location.href='ByteMarket/backend/src/main/resources/templates/newProduct.html'">
                         <i class="bi bi-plus-lg"></i>
                         <span class="fav-sellText">Vender</span>
                     </button>
                 </div>
-
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
                         onclick="window.location.href='../views/chat.html'">
@@ -72,37 +98,9 @@
                     </div>
                 </a>
             </div>
-            {{/user}}
-
-            {{#admin}}
-            <div class="col-6 searchContainer">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                    <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
-                        <i class="bi bi-search" style="color: white;"></i>
-                    </button>
-                </form>
-            </div>
-
-            <div class="col-2 loginButtons justify-content-end">
-                <a href="../login" style="text-decoration: none;">
-                    <button class="btn btn-outline-dark btn-custom" type="submit">
-                        <i class="bi bi-flag-fill"></i> Reportes
-                    </button>
-                </a>
-            </div>
-            <div class="col-3 header-profile" height="55">
-                <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
-                    <div>
-                        <img class="profilePic" src="images/perfil.png" alt="Logo">
-                    </div>
-                    <div>
-                        <p class="text-white fw-bolder mb-0">{{adminName}}</p>
-                    </div>
-                </a>
-            </div>
             {{/admin}}
             {{/logged}}
+
         </div>
     </div>
 </header>
