--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -16,8 +16,6 @@
     <title>ByteMarket</title>
 </head>
 
-{{>header}}
-
 <body>
     <header class="bg-dark py-2">
         <div class="container-fluid px-0">
@@ -33,9 +31,9 @@
     </header>
     <div class="container">
         <h2 class="mb-4">Iniciar sesión</h2>
-        <form class="form" action="login" method="post">
+        <form class="form" action="/login" method="post">
             <div class="mb-3">
-                <label for="username" class="form-label">Correo Electrónico</label>
+                <label for="mail" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="mail" name="mail" placeholder="ejemplo@correo.com">
             </div>
             <div class="mb-3">
@@ -44,16 +42,13 @@
             </div>
 
             <div class="d-flex justify-content-between align-items-center mb-3">
-                <a href="../templates/singin" class="text-white fw-normal">¿Olvidaste tu contraseña?</a>
+                <a href="#" class="text-white fw-normal">¿Olvidaste tu contraseña?</a>
             </div>
 
             <div class="row d-flex justify-content-center buttons">
                 <div class="col-md-12">
-                    <a href="../views/home.html" style="text-decoration: none;">
-                        <input type="submit" class="btn btn-outline-dark btn-custom w-100 me-2">
-                            <i class="bi bi-box-arrow-in-right"></i> Iniciar sesión
-                    </input>
-                    </a>
+                        <input type="submit" class="btn btn-outline-dark btn-custom w-100 me-2" value="Iniciar Sesión"></input>
+                        <input type="hidden" name="_csrf" value="{{token}}"/>
                 </div>                
             </div>
 
